fixing z-index for #460.

--- a/trunk/modules/base/css/owa.overlay.css
+++ b/trunk/modules/base/css/owa.overlay.css
@@ -8,7 +8,7 @@
 	border: 2px solid orange;
 	border-right:0px; 
 	opacity: 1; 
-	z-index: 100; 
+	z-index: 999999; 
 	width:auto; 
 	vertical-align: bottom;
 	font-family: sans-serif;
